2004-01-21  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/net/Makefile.am
	* 16x16/stock/net/stock_mail-unread-multiple.png
	* 24x24/stock/net/Makefile.am
	* 24x24/stock/net/stock_mail-unread-multiple.png: Evo icons

2004-01-20  Alexander Larsson  <alexl@redhat.com>

	* 48x48/mimetypes/Makefile.am:
	* 48x48/mimetypes/gnome-mime-text-x-shellscript.png:
	* 48x48/mimetypes/gnome-mime-application-x-shellscript.png:
	Fix shellscript icon name.

2004-01-20  Alexander Larsson  <alexl@redhat.com>

	* 48x48/mimetypes/Makefile.am:
	* 48x48/mimetypes/gnome-mime-application-qif.png:
	* 48x48/mimetypes/gnome-mime-application-smil.png:
	* 48x48/mimetypes/gnome-mime-application-x-backup.png:
	* 48x48/mimetypes/gnome-mime-application-x-class-file.png:
	* 48x48/mimetypes/gnome-mime-application-x-core-file.png:
	* 48x48/mimetypes/gnome-mime-application-x-core.png:
	* 48x48/mimetypes/gnome-mime-application-x-cpio-compressed.png:
	* 48x48/mimetypes/gnome-mime-application-x-cpio.png:
	* 48x48/mimetypes/gnome-mime-application-x-desktop.png:
	* 48x48/mimetypes/gnome-mime-application-x-gnome-app-info.png:
	* 48x48/mimetypes/gnome-mime-application-x-jar.png:
	* 48x48/mimetypes/gnome-mime-application-x-java-archive.png:
	* 48x48/mimetypes/gnome-mime-application-x-java-byte-code.png:
	* 48x48/mimetypes/gnome-mime-application-x-lha.png:
	* 48x48/mimetypes/gnome-mime-application-x-lhz.png:
	* 48x48/mimetypes/gnome-mime-application-x-object-file.png:
	* 48x48/mimetypes/gnome-mime-application-x-object.png:
	* 48x48/mimetypes/gnome-mime-application-x-rar.png:
	* 48x48/mimetypes/gnome-mime-application-x-sharedlib.png:
	* 48x48/mimetypes/gnome-mime-application-x-smil.png:
	* 48x48/mimetypes/gnome-mime-application-x-trash.png:
	* 48x48/mimetypes/gnome-mime-audio-midi.png:
	* 48x48/mimetypes/gnome-mime-audio-x-midi.png:
	* 48x48/mimetypes/gnome-mime-image-svg+xml.png:
	* 48x48/mimetypes/gnome-mime-image-svg.png:
	* 48x48/mimetypes/gnome-mime-text-x-c++.png: