@@ -1,5 +1,16 @@
 2004-01-21  Jakub Steiner <jimmac@ximian.com>
 
+	* 16x16/stock/generic/stock_score-high.png
+	* 16x16/stock/generic/stock_score-higher.png
+	* 16x16/stock/generic/stock_score-highest.png
+	* 16x16/stock/generic/stock_score-low.png
+	* 16x16/stock/generic/stock_score-lower.png
+	* 16x16/stock/generic/stock_score-lowest.png
+	* 16x16/stock/generic/stock_score-normal.png
+	* 16x16/stock/generic/Makefile.am: scoring icons for Evo
+
+2004-01-21  Jakub Steiner <jimmac@ximian.com>
+
 	* 16x16/stock/net/Makefile.am
 	* 16x16/stock/net/stock_mail-unread-multiple.png
 	* 24x24/stock/net/Makefile.am
